fix: handle text overflow

--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -351,6 +351,9 @@ button, .button
   z-index: 0
   left: 27%
 
+.fixed-icon
+  position: fixed
+
 .error-page
   margin-top: 150px
   h1,h2,div
@@ -473,6 +476,7 @@ button, .button
     margin-left: 30px
   .card-button:nth-child(2)
     margin-left: -20px
+
 .file-hide-overflow
   margin-top: -20px
 
